@@ -1,3 +1,8 @@
+2004-11-04  John W. Eaton  <jwe@octave.org>
+
+	* DLD-FUNCTIONS/inv.cc (Finv): Declare rcond volatile and check	value.
+	* DLD-FUNCTIONS/det.cc (Fdet): Likewise.
+	
 2004-11-03  John W. Eaton  <jwe@octave.org>
 
 	* data.cc (Fsize): Return 1 if requested dimension is larger than
